<resources>
    <string name="app_name">CMO LMS</string>
    <string name="l_m_s">LMS</string>
    <string name="c_m_o">CMO</string>
    <string name="sign">Sign in</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="reSend_Info">Didn’t get the code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="no_internet">No Internet</string>
    <string name="close_app">Close App</string>
    <string name="no_internet_info1">The app requires an active internet connection</string>
    <string name="no_internet_info2">for proper functioning, Please connect to</string>
    <string name="no_internet_info3">the stable internet source through</string>
    <string name="no_internet_info4">SIM or Wi-Fi and re-open the app.</string>
    <string name="mandatory_update">Mandatory Update</string>
    <string name="update_app">Update App</string>
    <string name="mandatory_update_info">currently installed version of app is no longer</string>
    <string name="mandatory_update_info1">supported. Please update to the latest version of</string>
    <string name="mandatory_update_info2">the app to get latest features and functionalities.</string>
    <string name="min_version">Min Supported Version:</string>
    <string name="latest_version">Latest version : </string>
    <string name="installed_version">Installed version: </string>
    <string name="cm_name">Shri Siddaramaiah</string>
    <string name="cm_state">Hon`ble Chief Minister | Govt of Karnataka</string>
    <string name="pdf">PDF</string>
    <string name="cmo_lms_summary_report">CMO-LMS Summary report</string>
    <string name="cmo_lms_subject_wise_report">CMO-LMS Subject wise Report</string>
    <string name="cmo_lms_constituency_wise">CMO-LMS Constituency Wise</string>
    <string name="hon_ble_chief_minister">Hon`ble Chief Minister</string>
    <string name="government_of_karnataka">Government of Karnataka</string>
    <string name="constituency">Constituency</string>
    <string name="department">Department</string>
    <string name="district">District</string>
    <string name="subject">Subject</string>
    <string name="search">Search</string>
    <string name="cmo_lms_department_wise_report">CMO-LMS Department wise Report</string>
    <string name="cmo_lms_elected_representative_wise_report">CMO-LMS Elected Representative wise Report</string>
    <string name="total_received">Total Received</string>
    <string name="total_disposed">Total Disposed</string>
    <string name="total_pending">Total Pending</string>
    <string name="application_no_rep_name_dept_etc">Application No, Rep Name, Dept etc.,</string>
    <string name="letter_details">Letter Details</string>
    <string name="select_category">select category</string>
    <string name="select_mlc_category">Select MLC Category</string>
    <string name="received">Received</string>
    <string name="disposed">Disposed</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="select_criteria">Select Criteria</string>
    <string name="constituency_name_of_representatives">Constituency/ Name of Representatives :</string>
    <string name="representative_type">Representative Type :</string>
    <string name="total_entries">Total Entries :</string>
    <string name="representative_details">Representative Letter/Note details</string>
    <string name="representative_ref_number">Ref Number :</string>
    <string name="letter_ref_number">Letter Ref Number :</string>
    <string name="representative_address">Representative Address :</string>
    <string name="attachement_path">Attachement Path :</string>
    <string name="grievance_category">Grievance Category :</string>
    <string name="grievance_desc">Grievance desc :</string>
    <string name="forwarded_dept">Forwarded Department :</string>
    <string name="forwarded_lineDepartment">Forwarded Line Department :</string>
    <string name="forwarded_district">Forwarded District :</string>
    <string name="cmog_action_type">CMOG Action Type:</string>
    <string name="closure_date">Closure Date:</string>
    <string name="closure_description">Closure Description :</string>
    <string name="post_id">Post ID :</string>
    <string name="mla_constituency">MLA Constituency :</string>
    <string name="mpl_constituency">MPL Constituency :</string>
    <string name="ex_mlc_constituency">EX-MLC Constituency :</string>
    <string name="mlc_constituency">MLC Constituency :</string>
    <string name="cm_remark">CM Remark :</string>
    <string name="priority_days">Priority Days:</string>
    <string name="no_of_days">No of Days :</string>
    <string name="eoffice_details">E-Office Details</string>
    <string name="recipt_cmp_no">Receipt CMP No :</string>
    <string name="status">Status :</string>
    <string name="receipt_no">Receipt No :</string>
    <string name="currenetly_with">Currenetly With :</string>
    <string name="since_when">Since When :</string>
    <string name="closing_remarks">Closing Remarks :</string>
    <string name="file_number">File Number :</string>
    <string name="file_cmp_no">File CMP No :</string>
    <string name="recipt_updated_on">Receipt Updated On :</string>
    <string name="mpr_constituency">MPR Constituency :</string>
    <string name="representative_mob_no">Representative Mob No :</string>
    <string name="representative_name">Representative Name :</string>
    <string name="letter_date">Letter Date :</string>
    <string name="log_out">Log Out</string>
    <string name="download_pdf">Download PDF</string>
    <string name="loading">Loading...</string>
    <string name="sl_no.">Serial number : </string>
    <string name="view">View</string>
</resources>