<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LetterDetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nest_scroll_view_letter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/letter_constraint_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/lin_lay_letter_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toTopOf="@+id/letter_constraint_1">

                <TextView
                    android:id="@+id/cmo_lms_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/letter_details"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/lin_lay_letter_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/blackcolor_border"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp">

                    <ImageView
                        android:id="@+id/file_img_pdf_letter"
                        android:layout_width="18dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="3dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:importantForAccessibility="no"
                        android:src="@drawable/baseline_file_present_24" />

                    <TextView
                        android:id="@+id/pdf_txt_btn_letter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/pdf" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/Rep_Details_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/representative_details"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/lin_lay_letter_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView_letter_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Rep_Details_head" />

            <Button
                android:id="@+id/pdf_viewer"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/download_pdf"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/recycleView_letter_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/eoffice_Details_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/eoffice_details"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/pdf_viewer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eOffice_recycleView_letter_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eoffice_Details_head"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>